--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden; 
+}
+
 .my-toast {
   border-radius: 6px !important;
 }
@@ -16,3 +27,4 @@
   background-color: #2196f3 !important;
   color: #fff !important;
 }
+
