--- a/src/app/admin/customers/customers.component.css
+++ b/src/app/admin/customers/customers.component.css
@@ -69,7 +69,7 @@
 }
 
 .modal-dialog {
-  max-width: 500px;
+  max-width: 90vw;
   margin: 1.75rem auto;
 }
 
@@ -115,6 +115,7 @@
   margin-top: 4px;
   white-space: pre-wrap;
   font-weight: 500;
+  margin-bottom: 20px;
 }
 .btn {
   background-color: #a004cf;
