--- a/src/app/user/payments/payments.component.css
+++ b/src/app/user/payments/payments.component.css
@@ -2,7 +2,7 @@
   padding: 24px;
   font-family: 'Segoe UI', sans-serif;
   background-color: #ffffff;
-  min-height: 85vh;
+  min-height: 45vh;
   overflow-y: auto;
 }
 
@@ -18,6 +18,7 @@
 .payment-container {
   display: flex;
   flex-direction: column;
+  /* background-color: #28a745; */
   gap: 1rem;
 }
 
