--- a/src/app/user/user-home/user-home.component.css
+++ b/src/app/user/user-home/user-home.component.css
@@ -1,5 +1,5 @@
 .main-wrapper {
-  height: calc(90vh - 55px); 
+  height: calc(95vh - 55px); 
   overflow-y: auto;
   padding: 24px;
   background: #ffffff;
@@ -194,7 +194,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 24px;
-  margin-bottom: 32px;
+  margin-bottom: 20px;
 }
 
 .card {
@@ -205,6 +205,7 @@
   text-align: center;
   transition: transform 0.2s;
   box-shadow: 0 4px 12px rgba(133, 0, 199, 0.05);
+  height: 18vh;
 }
 
 .card:hover {
